	Alpha r23
- Added statistical pricing models (Avg, StdDev, Median, IPR)
- Fixed (I hope) the crafting bug

	Alpha r22
- Added queue management functionality
- Improved bid/buy price boxes

	Alpha r21
- Improved posting functionality
- Added basic pricing models

	Alpha r20
- Dropped undercut functionality

	Alpha r19
- Improved layout
- Reduced CPU usage

	Beta 0.1.3
- Added German translation by chii
- Fixed error with some crafting materials
- Fixed error when the bags were empty

	Beta 0.1.2
- Added Russian translation by Aybolitus

	Beta 0.1.1
- Added localization support
- The addon window will be displayed above the native AH window if opened after it
- Bid & Buyout prices are no longer linked by default
	
	Beta 0.1.0
- First release	

	Known bugs
- Undercut sometimes matchs the lowest price if you're already selling a similar item.
- High CPU usage.
- Sometimes scanned auctions report a stack size of 1. This was a known bug of the API that was fixed on 29th February, but the fix may haven't been applied to Korean & Russian shards yet.
- When you try to post without any empty slot in your bags, the posting queue may block until relogging, throwing a lot of errors.